# idunSID

./: APKBUILD  Cargo.toml  PKGBUILD  README.md  asound.conf  buildpkg.sh  idunsnd.post-install  idunsnd.post-upgrade  idunsnd.rc
idunsnd/: Cargo.toml
idunsnd/src/: device_state.rs  sid_device_server.rs
idunsnd/src/sid_device_server/: player.rs
idunsnd/src/sid_device_server/player/: audio_renderer.rs  code_renderer.rs
old/: PKGBUILD  buildpkg.sh  idun-sid.service  makepkg.conf  service.install
resid-sys/: Cargo.toml  build.rs
resid-sys/src/: lib.rs
resid-sys/src/autogen/: autocxx-ffi-default-gen.rs
src/: main.rs  settings.rs
src/sid_device_server/player/: code_renderer.rs
